refact tx
